fixed resume not showing and added user feedback for when uploading and deleting

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -27,9 +27,11 @@
 
 .navbar h1{
     color: white;
-    font-size: 1.5rem;
-    font-weight: 500;
+    padding: 0.5em;
     margin-left: 2rem;
+    box-shadow: 0px 0px 4px 0px black;
+    border-radius: 10px;
+    background-color: #054a94;
 }
 
 .job {
