--- a/src/components/app.css
+++ b/src/components/app.css
@@ -25,13 +25,14 @@
 
 .job {
     margin-bottom: 10px;
-    background-color: yellowgreen;
-    color: white;
+    background-color: #b7d3f0;
+    color: black;
     border: 6px solid white;
     padding: 5px;
     border-radius: 7px;
 }
 
 .job.dragging {
-    background-color: orangered;
+    background-color: #054a94;
+    color: white;
 }
